@@ -3,7 +3,7 @@
 <tbody>
 <% line_num = 1 %>
 <% syntax_highlight(filename, to_utf8(content)).each_line do |line| %>
-<tr><th class="line-num" id="L<%= line_num %>"><%= line_num %></th><td class="line-code"><pre><%= line %></pre></td></tr>
+<tr><th class="line-num" id="L<%= line_num %>"><a href="#L<%= line_num %>"><%= line_num %></a></th><td class="line-code"><pre><%= line %></pre></td></tr>
 <% line_num += 1 %>
 <% end %>
 </tbody>
